@@ -10,7 +10,7 @@ namespace MyTester;
  * @copyright (c) 2015-2017, Jakub Konečný
  * @license https://spdx.org/licenses/BSD-3-Clause.html BSD-3-Clause
  */
-abstract class Assert {
+final class Assert {
   use \Nette\StaticClass;
   
   /**
