@@ -10,7 +10,7 @@ namespace MyTester;
  * @copyright (c) 2015-2017, Jakub Konečný
  * @license https://spdx.org/licenses/BSD-3-Clause.html BSD-3-Clause
  */
-abstract class Environment {
+final class Environment {
   use \Nette\StaticClass;
   
   const NAME = "My Tester";
