@@ -10,6 +10,7 @@ Version 2.0-dev
 - added script for automated tests runner, see README
 - BC break: parameter $params in Job::__construct() must always be an array
 - raised minimal version of PHP to 7.1
+- marked some classes as final
 
 Version 1.1
 - the environment for nette di extension is now set up in TestsRunner::execute()
